[build-system]
requires = ["setuptools>=61.2", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Products.DBAuth"
authors = [
    {name="Viktor Dick", email="viktor.dick@posteo.de"},
]
description = "Provide Zope authentication against a relational DB"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Framework :: Zope",
]
dependencies = [
    "Zope",
]
dynamic = ["version"]
requires-python = ">=3.8"

[tool.distutils.bdist_wheel]
universal = 1

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.zpt"]

[tool.setuptools_scm]
